--- a/chrome extenstions/index.html
+++ b/chrome extenstions/index.html
@@ -114,9 +114,9 @@
     }
    } </script> </amp-story-auto-ads> <amp-analytics type="gtag" data-credentials="include"> <script type="application/json"> {
         "vars": {
-            "gtag_id": "292604586",
+            "gtag_id": "G-8FVZ87VKT7",
             "config":{
-                "292604586":{
+                "G-8FVZ87VKT7":{
                     "groups":"default"
                 }
             }
@@ -129,7 +129,7 @@
                     "event_action": "story_progress",
                     "event_category": "${title}",
                     "event_label": "${storyPageId}",
-                    "send_to": ["292604586"]
+                    "send_to": ["G-8FVZ87VKT7"]
                 }
             },
             "storyEnd": {
@@ -138,7 +138,7 @@
                     "event_name": "custom",
                     "event_action": "story_complete",
                     "event_category": "${title}",
-                    "send_to": ["292604586"]
+                    "send_to": ["G-8FVZ87VKT7"]
                 }
             },
             "anchorClicks": {
@@ -150,7 +150,7 @@
                     "event_action": "cta_clicked",
                     "event_category": "${title}",
                     "event_label": "${ctalink}",
-                    "send_to": ["292604586"]
+                    "send_to": ["G-8FVZ87VKT7"]
                 }
             }
         }
