--- a/chrome extenstions/5-useful-chrome-extensions.html
+++ b/chrome extenstions/5-useful-chrome-extensions.html
@@ -1034,9 +1034,9 @@
     <script type="application/json">
     {
         "vars": {
-            "gtag_id": "292604586",
+            "gtag_id": "G-8FVZ87VKT7",
             "config":{
-                "292604586":{
+                "G-8FVZ87VKT7":{
                     "groups":"default"
                 }
             }
@@ -1049,7 +1049,7 @@
                     "event_action": "story_progress",
                     "event_category": "${title}",
                     "event_label": "${storyPageId}",
-                    "send_to": ["292604586"]
+                    "send_to": ["G-8FVZ87VKT7"]
                 }
             },
             "storyEnd": {
@@ -1058,7 +1058,7 @@
                     "event_name": "custom",
                     "event_action": "story_complete",
                     "event_category": "${title}",
-                    "send_to": ["292604586"]
+                    "send_to": ["G-8FVZ87VKT7"]
                 }
             },
             "anchorClicks": {
@@ -1070,7 +1070,7 @@
                     "event_action": "cta_clicked",
                     "event_category": "${title}",
                     "event_label": "${ctalink}",
-                    "send_to": ["292604586"]
+                    "send_to": ["G-8FVZ87VKT7"]
                 }
             }
         }
