--- a/chrome extenstions/5-useful-chrome-extensions.html
+++ b/chrome extenstions/5-useful-chrome-extensions.html
@@ -8,7 +8,15 @@
    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
    <meta name="amp-story-generator-name" content="MakeStories" />
    <meta name="amp-story-generator-version" content="2.0" />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8FVZ87VKT7"></script>
+   <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
 
+   gtag('config', 'G-8FVZ87VKT7');
+   </script>
 
    <script async custom-element='amp-story-auto-ads' src='https://cdn.ampproject.org/v0/amp-story-auto-ads-0.1.js'></script>
    <script async custom-element='amp-analytics' src='https://cdn.ampproject.org/v0/amp-analytics-0.1.js'></script>
